# serializer version: 1
# name: test_detail_basic
  '''
  <main class="s-main" id="main" role="main">
      <div aria-atomic="true" aria-live="polite" class="toast-container">
      </div>
      <section class="s-title-02">
          <div class="s-title-02__container container">
              <div class="s-title-02__row row">
                  <div class="s-title-02__col col-12">
                      <div class="c-prevstep">
                          <a aria-label="Retour à la page précédente" class="btn btn-ico btn-link ps-0" href="#">
                              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium">
                              </i>
                              <span>
                                  Retour
                              </span>
                          </a>
                      </div>
                      <div class="d-flex align-items-center flex-wrap gap-2">
                          <h1 class="mb-0">
                              Mon service de test
                          </h1>
                          <span class="badge rounded-pill text-bg-success fs-sm">
                              Mise à jour 15/01/2025
                          </span>
                      </div>
                      <div class="c-box c-box--action d-flex align-items-center justify-content-between">
                          <div class="form-row align-items-center gx-3">
                              <div class="form-group col-12 col-lg-auto">
                                  <a class="btn btn-lg btn-white btn-block btn-ico justify-content-center" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="orienter-un-bénéficiaire" href="https://dora.inclusion.gouv.fr" rel="noopener" target="_blank">
                                      <span>
                                          Orienter le bénéficiaire
                                      </span>
                                  </a>
                              </div>
                              <div class="form-group col-12 col-lg-auto">
                                  <button class="btn btn-lg btn-outline-white btn-block btn-ico justify-content-center" data-bs-target="#js-contact-modal" data-bs-toggle="modal" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="voir-coordonnees-contact" type="button">
                                      <span>
                                          Voir les coordonnées de contact du service
                                      </span>
                                  </button>
                              </div>
                          </div>
                          <div>
                              <button aria-expanded="false" aria-haspopup="true" aria-label="Plus d'actions" class="btn btn-sm btn-link btn-ico-only text-white" data-bs-toggle="dropdown" id="dropdown_action_menu" type="button">
                                  <i aria-hidden="true" class="ri-more-2-fill">
                                  </i>
                              </button>
                              <div aria-labelledby="dropdown_action_menu" class="dropdown-menu">
                                  <button class="dropdown-item" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="copier-lien-page" id="js-copy-link">
                                      Copier le lien de cette page
                                  </button>
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12 col-lg-8">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h4">
                              Informations du service
                          </h2>
                          <dl class="row mb-0">
                          </dl>
                          <p class="badge rounded-pill bg-disabled-color-light mb-0 mt-3">
                              <small class="text-muted">
                                  Source : Dora
                              </small>
                          </p>
                      </div>
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h4">
                              Description du service
                          </h2>
                          <div id="js-description-wrapper" style="max-height: 150px; overflow: hidden; position: relative;">
                              <div class="mb-0">
                                  <p>
                                      Description du service.
                                  </p>
                              </div>
                              <div id="js-description-fade" style="position: absolute; bottom: 0; left: 0; right: 0; height: 60px; background: linear-gradient(transparent, white);">
                              </div>
                          </div>
                          <a class="fw-bold d-none" href="#" id="js-description-toggle">
                              Lire la suite
                          </a>
                      </div>
                  </div>
                  <div class="col-12 col-lg-4">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h4">
                              Informations de la structure
                          </h2>
                          <p>
                              Ma structure de test
                          </p>
                          <a class="btn btn-secondary w-100" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="voir-fiche-structure" href="#" type="button">
                              Voir la fiche structure
                          </a>
                      </div>
                  </div>
              </div>
          </div>
      </section>
      <div aria-labelledby="js-contact-modal-label" aria-modal="true" class="modal fade" id="js-contact-modal" role="dialog" tabindex="-1">
          <div class="modal-dialog modal-dialog-centered">
              <div class="modal-content">
                  <div class="modal-header">
                      <h2 class="modal-title h5" id="js-contact-modal-label">
                          Coordonnées de contact
                      </h2>
                      <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                      </button>
                  </div>
                  <div class="modal-body">
                  </div>
                  <div class="modal-footer">
                      <button class="btn btn-primary" data-bs-dismiss="modal" type="button">
                          Terminer
                      </button>
                  </div>
              </div>
          </div>
      </div>
  </main>
  
  '''
# ---
# name: test_detail_not_orientable
  '''
  <div class="c-box c-box--action d-flex align-items-center justify-content-between">
      <div class="form-row align-items-center gx-3">
          <div class="form-group col-12 col-lg-auto">
              <button class="btn btn-lg btn-outline-white btn-block btn-ico justify-content-center" data-bs-target="#js-contact-modal" data-bs-toggle="modal" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="voir-coordonnees-contact" type="button">
                  <span>
                      Voir les coordonnées de contact du service
                  </span>
              </button>
          </div>
      </div>
      <div>
          <button aria-expanded="false" aria-haspopup="true" aria-label="Plus d'actions" class="btn btn-sm btn-link btn-ico-only text-white" data-bs-toggle="dropdown" id="dropdown_action_menu" type="button">
              <i aria-hidden="true" class="ri-more-2-fill">
              </i>
          </button>
          <div aria-labelledby="dropdown_action_menu" class="dropdown-menu">
              <button class="dropdown-item" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="copier-lien-page" id="js-copy-link">
                  Copier le lien de cette page
              </button>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: test_detail_orientable
  '''
  <div class="c-box c-box--action d-flex align-items-center justify-content-between">
      <div class="form-row align-items-center gx-3">
          <div class="form-group col-12 col-lg-auto">
              <a class="btn btn-lg btn-white btn-block btn-ico justify-content-center" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="orienter-un-bénéficiaire" href="https://dora.inclusion.gouv.fr" rel="noopener" target="_blank">
                  <span>
                      Orienter le bénéficiaire
                  </span>
              </a>
          </div>
          <div class="form-group col-12 col-lg-auto">
              <button class="btn btn-lg btn-outline-white btn-block btn-ico justify-content-center" data-bs-target="#js-contact-modal" data-bs-toggle="modal" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="voir-coordonnees-contact" type="button">
                  <span>
                      Voir les coordonnées de contact du service
                  </span>
              </button>
          </div>
      </div>
      <div>
          <button aria-expanded="false" aria-haspopup="true" aria-label="Plus d'actions" class="btn btn-sm btn-link btn-ico-only text-white" data-bs-toggle="dropdown" id="dropdown_action_menu" type="button">
              <i aria-hidden="true" class="ri-more-2-fill">
              </i>
          </button>
          <div aria-labelledby="dropdown_action_menu" class="dropdown-menu">
              <button class="dropdown-item" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="copier-lien-page" id="js-copy-link">
                  Copier le lien de cette page
              </button>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: test_detail_with_all_optional_fields
  '''
  <main class="s-main" id="main" role="main">
      <div aria-atomic="true" aria-live="polite" class="toast-container">
      </div>
      <section class="s-title-02">
          <div class="s-title-02__container container">
              <div class="s-title-02__row row">
                  <div class="s-title-02__col col-12">
                      <div class="c-prevstep">
                          <a aria-label="Retour à la page précédente" class="btn btn-ico btn-link ps-0" href="#">
                              <i aria-hidden="true" class="ri-arrow-drop-left-line ri-xl fw-medium">
                              </i>
                              <span>
                                  Retour
                              </span>
                          </a>
                      </div>
                      <div class="d-flex align-items-center flex-wrap gap-2">
                          <h1 class="mb-0">
                              Service complet
                          </h1>
                          <span class="badge rounded-pill text-bg-success fs-sm">
                              Mise à jour 01/06/2025
                          </span>
                      </div>
                      <div class="c-box c-box--action d-flex align-items-center justify-content-between">
                          <div class="form-row align-items-center gx-3">
                              <div class="form-group col-12 col-lg-auto">
                                  <a class="btn btn-lg btn-white btn-block btn-ico justify-content-center" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="orienter-un-bénéficiaire" href="https://dora.inclusion.gouv.fr" rel="noopener" target="_blank">
                                      <span>
                                          Orienter le bénéficiaire
                                      </span>
                                  </a>
                              </div>
                              <div class="form-group col-12 col-lg-auto">
                                  <button class="btn btn-lg btn-outline-white btn-block btn-ico justify-content-center" data-bs-target="#js-contact-modal" data-bs-toggle="modal" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="voir-coordonnees-contact" type="button">
                                      <span>
                                          Voir les coordonnées de contact du service
                                      </span>
                                  </button>
                              </div>
                          </div>
                          <div>
                              <button aria-expanded="false" aria-haspopup="true" aria-label="Plus d'actions" class="btn btn-sm btn-link btn-ico-only text-white" data-bs-toggle="dropdown" id="dropdown_action_menu" type="button">
                                  <i aria-hidden="true" class="ri-more-2-fill">
                                  </i>
                              </button>
                              <div aria-labelledby="dropdown_action_menu" class="dropdown-menu">
                                  <button class="dropdown-item" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="copier-lien-page" id="js-copy-link">
                                      Copier le lien de cette page
                                  </button>
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12 col-lg-8">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h4">
                              Informations du service
                          </h2>
                          <div class="mb-3">
                              <p class="text-success mb-0">
                                  <i aria-hidden="true" class="ri-time-line">
                                  </i>
                                  Réponse rapide : sous 3 jours
                              </p>
                          </div>
                          <p>
                              Résumé court du service.
                          </p>
                          <dl class="row mb-0">
                              <dt class="fw-normal col-sm-4">
                                  Public concerné
                                  <i aria-label="Toute personne majeure." class="ri-information-line ri-xl text-info" data-bs-title="Toute personne majeure." data-bs-toggle="tooltip" role="button" tabindex="0">
                                  </i>
                              </dt>
                              <dd class="col-sm-8">
                                  <strong>
                                      Adultes
                                  </strong>
                              </dd>
                              <dt class="fw-normal col-sm-4">
                                  Lieu d'accueil
                              </dt>
                              <dd class="col-sm-8">
                                  <strong>
                                      En présentiel
                                  </strong>
                                  <strong>
                                      —
                                              12 rue de la Paix
                                              , Bâtiment B
                                          — 75001 Paris
                                  </strong>
                              </dd>
                              <dt class="fw-normal col-sm-4">
                                  Frais à charge
                                  <i aria-label="Sous conditions de ressources." class="ri-information-line ri-xl text-info" data-bs-title="Sous conditions de ressources." data-bs-toggle="tooltip" role="button" tabindex="0">
                                  </i>
                              </dt>
                              <dd class="col-sm-8">
                                  <strong>
                                      Gratuit
                                  </strong>
                              </dd>
                              <dt class="fw-normal col-sm-4">
                                  Fréquence et horaires
                                  <i aria-label="Hors jours fériés" class="ri-information-line ri-xl text-info" data-bs-title="Hors jours fériés" data-bs-toggle="tooltip" role="button" tabindex="0">
                                  </i>
                              </dt>
                              <dd class="col-sm-8">
                                  <ul class="list-data d-flex">
                                      <li>
                                          <span>
                                              <strong>
                                                  Lundi :
                                              </strong>
                                          </span>
                                      </li>
                                      <li class="ms-2">
                                          <span>
                                              <strong>
                                                  9h00 à 17h00
                                              </strong>
                                          </span>
                                      </li>
                                  </ul>
                                  <ul class="list-data d-flex">
                                      <li>
                                          <span>
                                              <strong>
                                                  Mardi :
                                              </strong>
                                          </span>
                                      </li>
                                      <li class="ms-2">
                                          <span>
                                              <strong>
                                                  9h00 à 17h00
                                              </strong>
                                          </span>
                                      </li>
                                  </ul>
                                  <ul class="list-data d-flex">
                                      <li>
                                          <span>
                                              <strong>
                                                  Mercredi :
                                              </strong>
                                          </span>
                                      </li>
                                      <li class="ms-2">
                                          <span>
                                              <strong>
                                                  9h00 à 17h00
                                              </strong>
                                          </span>
                                      </li>
                                  </ul>
                                  <ul class="list-data d-flex">
                                      <li>
                                          <span>
                                              <strong>
                                                  Jeudi :
                                              </strong>
                                          </span>
                                      </li>
                                      <li class="ms-2">
                                          <span>
                                              <strong>
                                                  9h00 à 17h00
                                              </strong>
                                          </span>
                                      </li>
                                  </ul>
                                  <ul class="list-data d-flex">
                                      <li>
                                          <span>
                                              <strong>
                                                  Vendredi :
                                              </strong>
                                          </span>
                                      </li>
                                      <li class="ms-2">
                                          <span>
                                              <strong>
                                                  9h00 à 17h00
                                              </strong>
                                          </span>
                                      </li>
                                  </ul>
                              </dd>
                              <dt class="fw-normal col-sm-4">
                                  Les critères d'admission
                              </dt>
                              <dd class="col-sm-8">
                                  <strong>
                                      Être orienté par un prescripteur.
                                  </strong>
                              </dd>
                          </dl>
                          <p class="badge rounded-pill bg-disabled-color-light mb-0 mt-3">
                              <small class="text-muted">
                                  Source : Dora
                              </small>
                          </p>
                      </div>
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h4">
                              Description du service
                          </h2>
                          <div id="js-description-wrapper" style="max-height: 150px; overflow: hidden; position: relative;">
                              <div class="mb-0">
                                  Description complète
                                  <p>
                                      Avec du
                                      <strong>
                                          markdown
                                      </strong>
                                      .
                                  </p>
                              </div>
                              <div id="js-description-fade" style="position: absolute; bottom: 0; left: 0; right: 0; height: 60px; background: linear-gradient(transparent, white);">
                              </div>
                          </div>
                          <a class="fw-bold d-none" href="#" id="js-description-toggle">
                              Lire la suite
                          </a>
                      </div>
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h4">
                              Thématique et besoins associés
                          </h2>
                          <ul class="mb-0">
                              <li>
                                  Logement - Hébergement
                              </li>
                          </ul>
                      </div>
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h4">
                              Les démarches à réaliser
                          </h2>
                          <ul class="mb-0">
                              <li>
                                  Par téléphone
                              </li>
                          </ul>
                          <p class="mt-2 mb-0">
                              Contacter le service par téléphone.
                          </p>
                      </div>
                  </div>
                  <div class="col-12 col-lg-4">
                      <div class="c-box mb-3 mb-md-4">
                          <h2 class="h4">
                              Informations de la structure
                          </h2>
                          <p>
                              Structure complète
                          </p>
                          <a class="btn btn-secondary w-100" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="voir-fiche-structure" href="#" type="button">
                              Voir la fiche structure
                          </a>
                      </div>
                  </div>
              </div>
          </div>
      </section>
      <div aria-labelledby="js-contact-modal-label" aria-modal="true" class="modal fade" id="js-contact-modal" role="dialog" tabindex="-1">
          <div class="modal-dialog modal-dialog-centered">
              <div class="modal-content">
                  <div class="modal-header">
                      <h2 class="modal-title h5" id="js-contact-modal-label">
                          Coordonnées de contact
                      </h2>
                      <button aria-label="Fermer" class="btn-close" data-bs-dismiss="modal" type="button">
                      </button>
                  </div>
                  <div class="modal-body">
                      <div class="d-flex align-items-center justify-content-between border rounded p-3 mb-3">
                          <div>
                              <i aria-hidden="true" class="ri-mail-line me-2">
                              </i>
                              contact@service.fr
                          </div>
                          <button aria-label="Copier l'adresse e-mail" class="btn btn-link btn-ico-only" data-email="contact@service.fr" data-matomo-action="clic" data-matomo-category="fiche-service" data-matomo-event="true" data-matomo-option="copier-email-contact" id="js-copy-email" type="button">
                              <i aria-hidden="true" class="ri-file-copy-line">
                              </i>
                          </button>
                      </div>
                      <div class="border rounded p-3">
                          <i aria-hidden="true" class="ri-phone-line me-2">
                          </i>
                          01 23 45 67 89
                      </div>
                  </div>
                  <div class="modal-footer">
                      <button class="btn btn-primary" data-bs-dismiss="modal" type="button">
                          Terminer
                      </button>
                  </div>
              </div>
          </div>
      </div>
  </main>
  
  '''
# ---
